cmake_minimum_required(VERSION 3.25)
project(Code)

set(CMAKE_CXX_STANDARD 11)

add_executable(hello_server CH-1/1.1hello_server.cpp)
add_executable(1.2hello_client CH-1/1.2hello_client.cpp)
add_executable(1.3hello_client CH-1/1.3hello_client.cpp)
add_executable(4.1echo_server CH-4/4.1echo_server.cpp)
add_executable(4.2echo_client CH-4/4.2echo_client.cpp)

add_executable(5.1echo_server CH-5/5.1echo_server.cpp)
add_executable(5.2echo_client CH-5/5.2echo_client.cpp)
add_executable(5.3op_server CH-5/5.3op_server.cpp)
add_executable(5.4op_client CH-5/5.4op_client.cpp)
add_executable(6.1echo_server CH-6/6.1UDP_echo_server.cpp)
add_executable(6.2echo_client CH-6/6.2UDP_echo_client.cpp)
add_executable(6.3echo_client_connect_socket CH-6/6.3UDP_echo_client_connect_socket.cpp)
add_executable(7.1echo_server CH-7/7.1echo_server.cpp)
add_executable(7.2echo_client CH-7/7.2echo_client.cpp)
add_executable(signal CH-10/signal.cpp)
add_executable(select_echo_server CH-12/12.1select_echo_server.c)
add_executable(12.2echo_client CH-12/12.2echo_client.cpp)
add_executable(13.1writev CH-13/13.1writev.c)
add_executable(13.2readv CH-13/13.2readv.c)
add_executable(test CH-16/test.c)
